practice/kubernetes/project/admin3-ui-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deployment-admin3-ui
  namespace: yuyang
  labels:
    app:  deployment-admin3-ui
spec:
  selector:
    matchLabels:
      app: pod-admin3-ui
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  pod-admin3-ui
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  pod-admin3-ui
        image:  harbor.labworlds.cc/admin3-ui/master:08131833-yuyang
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  http
        volumeMounts:
        - name: volume-configmap-admin3-ui-server
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
        - name: volume-configmap-admin3-ui-server
          configMap:
            name: configmap-admin3-ui-server
      restartPolicy: Always
      imagePullSecrets:
        - name: secret-habbor-login

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deployment-admin3-server
  namespace: yuyang
  labels:
    app:  deployment-admin3-server
spec:
  selector:
    matchLabels:
      app: pod-admin3-server
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  pod-admin3-server
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  pod-admin3-server
        image:  harbor.labworlds.cc/admin3-server/master:08141645-yuyang
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 69
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /admin3/actuator/health
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  8080
          name:  http
        volumeMounts:
        - name: volume-configmap-admin3-ui-server
          mountPath: /app/application.yml
          subPath: application.yaml
      volumes:
        - name: volume-configmap-admin3-ui-server
          configMap:
            name: configmap-admin3-ui-server
      restartPolicy: Always
      imagePullSecrets:
        - name: secret-habbor-login

---

apiVersion: v1
kind: Service
metadata:
  name: service-admin3-ui
  namespace: yuyang
spec:
  selector:
    app: pod-admin3-ui
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-admin3-server
  namespace: yuyang
spec:
  selector:
    app: pod-admin3-server
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-yuyang-admin-labworlds-cc
  namespace: yuyang
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - yuyang.admin.labworlds.cc
    secretName: secret-yuyang-admin-labworlds-cc
  rules:
  - host: yuyang.admin.labworlds.cc
    http:
      paths:
      - path: /admin3
        pathType: Prefix
        backend:
          service:
            name: service-admin3-server
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-admin3-ui
            port:
              number: 80
