practice/kubernetes/project/go-starter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deployment-go-starter
  namespace: yuyang
  labels:
    app:  deployment-go-starter
spec:
  selector:
    matchLabels:
      app: pod-go-starter
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  pod-go-starter
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  pod-go-starter
        image:  harbor.labworlds.cc/go-starter/master:08141001-yuyang 
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/users
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  8080
          name:  http
      restartPolicy: Always
      imagePullSecrets:
        - name: secret-habbor-login

---
apiVersion: v1
kind: Service
metadata:
  name: service-go-starter
  namespace: yuyang
spec:
  selector:
    app: pod-go-starter
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http-go-starter
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-yuyang-go-labworlds-cc
  namespace: yuyang
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - yuyang.go.labworlds.cc
    secretName: secret-yuyang-go-labworlds-cc
  rules:
  - host: yuyang.go.labworlds.cc
    http:
      paths:
      - path: /go(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-go-starter
            port:
              number: 8080
