practice/kubernetes/project/light-year-admin-template.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deployment-light-year-admin-template
  namespace: yuyang
  labels:
    app:  deployment-light-year-admin-template
spec:
  selector:
    matchLabels:
      app: pod-light-year-admin-template
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  pod-light-year-admin-template
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  pod-light-year-admin-template
        image:  harbor.labworlds.cc/light-year-admin-template/master:08121528-yuyang
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 125Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  http
        volumeMounts:
        - name: volume-configmap-light-year-admin-template
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
        - name: volume-configmap-light-year-admin-template
          configMap:
            name: configmap-light-year-admin-template
      restartPolicy: Always
      imagePullSecrets:
        - name: secret-habbor-login

---

apiVersion: v1
kind: Service
metadata:
  name: service-light-year-admin-template
  namespace: yuyang
spec:
  selector:
    app: pod-light-year-admin-template
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-yuyang-year-labworlds-cc
  namespace: yuyang
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - yuyang-year.labworlds.cc
    secretName: secret-yuyang-year-labworlds.cc
  rules:
  - host: yuyang-year.labworlds.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-light-year-admin-template
            port:
              number: 80
