practice/kubernetes/project/stars-emmision.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deployment-stars-emmision
  namespace: yuyang
  labels:
    app:  deployment-stars-emmision
spec:
  selector:
    matchLabels:
      app: pod-stars-emmision
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  pod-stars-emmision
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  pod-stars-emmision
        image:  harbor.labworlds.cc/stars-emmision/master:08111109-yuyang
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  http
        volumeMounts:
        - name: volume-configmap-stars-emmision
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
        - name: volume-configmap-stars-emmision
          configMap:
            name: configmap-stars-emmision
      restartPolicy: Always
      imagePullSecrets:
        - name: secret-habbor-login
        
---
apiVersion: v1
kind: Service
metadata:
  name: service-stars-emmision
  namespace: yuyang
spec:
  selector:
    app: pod-stars-emmision
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-yuyang-stars-labworlds-cc
  namespace: yuyang
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - yuyang-stars.labworlds.cc
    secretName: secret-yuyang-stars-labworlds-cc
  rules:
  - host: yuyang-stars.labworlds.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-stars-emmision
            port:
              number: 80
